--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/styles/openwms-viewports.css
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/styles/openwms-viewports.css
@@ -28,24 +28,24 @@
 
 /* Additional viewports */
 @media (min-width: 768px) {
-    .header-area { width: 750px; }
+    /*.header-area { width: 750px; }*/
 }
 @media (min-width: 992px) {
-    .header-area { width: 970px; }
+    /*.header-area { width: 970px; }*/
 }
 @media (min-width: 1200px) {
-    .header-area { width: 1170px; }
+    /*.header-area { width: 1170px; }*/
 }
 @media (min-width: 1600px) {
     .container { width: 1600px; }
-    .header-area { width: 1568px; }
+    /*.header-area { width: 1568px; }*/
 }
 @media (min-width: 1920px) {
     .container { width: 1903px; }
-    .header-area { width: 1903px; }
+    /*.header-area { width: 1903px; }*/
 }
 @media (min-width: 2560px) {
     .container { width: 1631px; }
-    .header-area { width: 1631px; }
+    /*.header-area { width: 1631px; }*/
 }
 
