--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Login.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Login.html
@@ -1,32 +1,9 @@
-<!--
-/*
- * openwms.org, the Open Warehouse Management System.
- * Copyright (C) 2014 Heiko Scherrer
- *
- * This file is part of openwms.org.
- *
- * openwms.org is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of the
- * License, or (at your option) any later version.
- *
- * openwms.org is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this software. If not, write to the Free Software
- * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
- * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
- */
--->
 <div id="loginDialog" class="login-dialog modal show" data-keyboard="false" data-backdrop="static" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">Login</h3>
+                <h3 class="modal-title">{{'BASE.LOGIN.NAME'|translate}}</h3>
             </div>
             <div class="modal-body">
                 <form ng-submit="login()" class="form-horizontal">
