--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Login.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Login.html
@@ -14,14 +14,14 @@
                         <label class="col-sm-2 control-label" for="usernameTxt">Username</label>
 
                         <div class="col-sm-10">
-                            <input id="usernameTxt" class="form-control" type="text" placeholder="Username" ng-model="user.username"/>
+                            <input id="usernameTxt" class="form-control" type="text" ng-model="user.username"/>
                         </div>
                     </div>
                     <div class="form-group form-group-lg">
                         <label class="col-sm-2 control-label" for="passwordTxt">Password</label>
 
                         <div class="col-sm-10">
-                            <input id="passwordTxt" class="form-control" type="text" placeholder="Password" ng-model="user.password"/>
+                            <input id="passwordTxt" class="form-control" type="password" ng-model="user.password"/>
                         </div>
                     </div>
                     <div class="control-group">
