--- a/docs/_includes/custom/sidebarconfigs.html
+++ b/docs/_includes/custom/sidebarconfigs.html
@@ -10,10 +10,12 @@
 {% elsif page.sidebar == "mydoc_sidebar" %}
 {% assign sidebar = site.data.sidebars.mydoc_sidebar.entries %}
 
+{% elsif page.sidebar == "tms-transportation" %}
+{% assign sidebar = site.data.sidebars.tms-transportation-sb.entries %}
+
 {% else %}
 {% assign sidebar = site.data.sidebars.home_sidebar.entries %}
 {% endif %}
-
 
 
 {% comment %}
